# Pandora

./: CMakeLists.txt  Config.cmake.in  Doxyfile  README  README.md  SmartFactory.cpp  SmartFactory.h
.github/workflows/: build.yml
cmake/: Root5to6Comp.cmake
examples/: CMakeLists.txt  example_multi_read.cpp  example_read.cpp  example_write.cpp
inc/: LinkDef.h  Pandora.h  SmartFactory.h
include/: pandora.hpp
source/: pandora.cpp
src/: Pandora.cpp  SmartFactory.cxx
tests/: CMakeLists.txt  basic_tests.cpp  copy_move_tests.cpp  test_runner.cpp
